# doric-finetune

./: .env.template  .gitignore  AGENTS.md  README.md  TODO.md  doric_conversations.jsonl  doric_conversations_sharegpt.jsonl  doric_sharegpt.jsonl  doric_synth.jsonl  generate_doric_dataset.py  main.py  pyproject.toml  topics.json  topics.txt
data_collection/: scrape_dictionary.py
dataset_generation/: doric_response_judge.py  generate_doric_dataset.py  generate_topics_via_llm.py  replace_with_doric.py  transform_to_sharegpt.py
datasets/: doric_conversation_sharegpt.jsonl  doric_conversations_chatml.jsonl  doric_conversations_sharegpt.jsonl  doric_dictionary.json  doric_synth.jsonl
finetune_notebook/: Doric_finetune_v4.ipynb
lib/: __init__.py  openai_helpers.py
modal/: README.md  chat_cli.py  vllm_doric.py
tinker/: train.py
tinker/lib/: load_dataset.py  renderers.py
